--- a/YouTubeScreenShot/src/styles.css
+++ b/YouTubeScreenShot/src/styles.css
@@ -13,7 +13,7 @@
 
 #screenshot-ui button {
   background-color: var(--yt-app-background);
-  border: 1px solid var(--yt-spec-call-to-action);
+  /*border: 1px solid var(--yt-spec-call-to-action);*/
   border-radius: 3px;
   border-style: none;
   color: var(--yt-button-active-color);
